--- a/gold/ch-5/top-1/package.json
+++ b/gold/ch-5/top-1/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/fandok/fer-wave-15#readme",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "change-case": "^5.2.0",
+    "date-and-time": "^3.0.3",
+    "format-currency": "^1.0.0",
+    "snake-case": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "type": "module"
 }
